@@ -1,3 +1,3 @@
 version=0.4.1
-build=24
-date=2012-07-31
+build=25
+date=2012-08-01
